--- a/.github/workflows/server_wapp-uks-prod-stdserver-01.yml
+++ b/.github/workflows/server_wapp-uks-prod-stdserver-01.yml
@@ -40,6 +40,9 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
