--- a/AdminUtils/package.json
+++ b/AdminUtils/package.json
@@ -13,6 +13,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
+    "nodemailer": "^6.9.11",
     "uuid": "^9.0.1"
   }
 }
