--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -27,7 +27,7 @@ jobs:
 
           cd Server
           docker build -t pr-preview:${{ github.event.number }} .
-          docker run -d --net=bridge --ip=172.17.0.51 --name pr-preview-${{ github.event.number }} --env-file ../test.env pr-preview:${{ github.event.number }}
+          docker run -d --net=bridge --ip=172.17.0.51 --name pr-preview-${{ github.event.number }} --env-file ../../test.env pr-preview:${{ github.event.number }}
 
   cleanup:
     if: github.event.action == 'closed'
