--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -2,7 +2,7 @@ name: Deploy website
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, closed]
+    types: [opened, synchronize, reopened]
   push:
     branches:
       - main
@@ -49,7 +49,8 @@ jobs:
             git pull origin ${{ github.ref }}
 
             cd Server
-            docker build -t wedding:${{ github.ref }} .
+            # Tag the image with the commit hash
+            docker build -t wedding:${{ github.sha }} .
             docker stop wedding || true
             docker rm wedding || true
-            docker run -d --net=docker_backend --ip=172.20.2.1 --name live_wedding --env-file ../../production.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro wedding:${{ github.ref }}
+            docker run -d --net=docker_backend --ip=172.20.2.1 --name live_wedding --env-file ../../production.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro wedding:${{ github.sha }}
