--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -23,6 +23,8 @@ jobs:
           port: 22
           script: |
             cd ~/SaveTheDate-Emailer
+            git fetch origin
+            git reset --hard origin/main
             git pull origin ${{ github.head_ref }}
 
             cd Server
@@ -46,11 +48,13 @@ jobs:
           port: 22
           script: |
             cd ~/SaveTheDate-Emailer
+            git fetch origin
+            git reset --hard origin/main
             git pull origin ${{ github.ref }}
 
             cd Server
             # Tag the image with the commit hash
             docker build -t wedding:${{ github.sha }} .
-            docker stop wedding || true
-            docker rm wedding || true
+            docker stop live_wedding|| true
+            docker rm live_wedding || true
             docker run -d --net=docker_backend --ip=172.20.2.1 --name live_wedding --env-file ../../production.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro wedding:${{ github.sha }}
