--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -21,6 +21,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
+          script_stop: true
           script: |
             cd ~/SaveTheDate-Emailer
             git fetch origin
@@ -46,6 +47,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           port: 22
+          script_stop: true
           script: |
             cd ~/SaveTheDate-Emailer
             git fetch origin
