--- a/Server/package.json
+++ b/Server/package.json
@@ -13,8 +13,7 @@
     "@prisma/adapter-libsql": "^5.9.1",
     "@prisma/client": "^5.10.2",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "ioredis": "^5.3.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "prisma": "^5.10.2"
