--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,8 @@
     "@prisma/client": "5.18.0",
     "cookie-parser": "1.4.6",
     "dotenv": "16.4.5",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prisma": "5.18.0"
