--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "1.4.7",
     "dotenv": "16.4.5",
     "express": "4.21.1",
+    "pushbullet": "3.0.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
