--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -30,7 +30,7 @@ jobs:
             docker build --build-arg NODE_VERSION=$(cat ../.nvmrc | tr -cd [:digit:].) -t wedding:${{ github.event.number }} .
             docker stop test_wedding || true
             docker rm test_wedding || true
-            docker run -d --restart unless-stopped --net=docker_backend --ip=172.20.2.2 --name test_wedding --env-file ../../test.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro wedding:${{ github.event.number }}
+            docker run -d --restart unless-stopped --net=docker_backend --ip=172.20.2.2 --name test_wedding --env-file ../../test.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro -v /home/${{ secrets.USERNAME }}/test-logs:/usr/src/app/logs:rw wedding:${{ github.event.number }}
 
   deployProduction:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -57,4 +57,4 @@ jobs:
             docker build --build-arg NODE_VERSION=$(cat ../.nvmrc | tr -cd [:digit:].) -t wedding:${{ github.sha }} .
             docker stop live_wedding|| true
             docker rm live_wedding || true
-            docker run -d --restart unless-stopped --net=docker_backend --ip=172.20.2.1 --name live_wedding --env-file ../../production.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro wedding:${{ github.sha }}
+            docker run -d --restart unless-stopped --net=docker_backend --ip=172.20.2.1 --name live_wedding --env-file ../../production.env -v /home/${{ secrets.USERNAME }}/invitations:/usr/src/app/invitations:ro -v /home/${{ secrets.USERNAME }}/production-logs:/usr/src/app/logs:rw wedding:${{ github.sha }}
