--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp default"
   },
   "author": "Jack Moorhouse",
   "license": "ISC",
@@ -20,6 +21,11 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "gulp": "4.0.2",
+    "gulp-debug": "5.0.1",
+    "gulp-load-plugins": "2.0.8",
+    "gulp-responsive": "3.0.1",
+    "gulp-sharp-responsive": "0.4.1",
     "prisma": "5.22.0"
   }
 }
