build: add multi-stage Dockerfile for CSS/JS optimization with Gulp integration

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -18,6 +18,22 @@ RUN --mount=type=bind,source=package.json,target=package.json \
 
 COPY . .
 
+FROM base AS builder
+
+RUN npm remove gulp-sharp-responsive
+
+RUN --mount=type=bind,source=package.json,target=package.json \
+  --mount=type=bind,source=package-lock.json,target=package-lock.json \
+  --mount=type=cache,target=/root/.npm \
+  npm ci --include=dev
+
+RUN npx gulp css && npx gulp js
+
+FROM base AS production
+
+COPY --from=builder /usr/src/app/public/optimised/css ./public/optimised/css
+COPY --from=builder /usr/src/app/public/optimised/js ./public/optimised/js
+
 RUN npx prisma generate
 
 USER node
